--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,3 +130,284 @@ input[type=button], input[type=submit], input[type=reset] {
     text-shadow: 0 3px 10px black;
   }
 
+
+/* ***************************** Utkarsh CSS **********************************
+  :root {
+    --main-theme-dark: #C62C2C;
+    --main-theme-light: white;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    background-color: var(--main-theme-dark);
+    height: 100vh;
+    width: 100vw;
+}
+
+.website-div {
+    z-index: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header{
+    height: 10%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+}
+
+.footer {
+    height: 8%;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+}
+
+.top-bar {
+    
+    height: 100%;
+    width: 100%;
+    background-color: var(--main-theme-dark);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.bot-bar {
+
+    height: 100%;
+    width: 100%;
+    color: var(--main-theme-dark);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    border-top-style: solid;
+    border-top-width: 1px;
+    background-color: white;
+
+}
+
+.bot-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vh;
+    height: 100%;
+    width: 100%;
+    background-color: transparent;
+    border-style: none;
+}
+
+.bot-btn:hover {
+    cursor: pointer;
+}
+
+.nav div {
+    height: 4px;
+    background-color: rgb(255, 255, 255);
+    margin: 5px;
+    border-radius: 25px;
+    transition: 0.3s;
+
+}
+
+.nav-btn-div {
+    position: absolute;
+    right: 15px;
+}
+
+.nav {
+    width: 30px;
+    display: block;    
+}
+.one {
+    width: 30px;
+}
+.two {
+    width: 20px;
+}
+.three {
+    width: 25px;
+}
+
+.nav:hover div {
+    width: 30px;
+}
+
+.sidebar {
+    float: right;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 20;
+    top: 0;
+    right: 0;
+    background-color: var(--main-theme-dark);
+    overflow-x: hidden;
+    transition: 0.3s;
+    padding-top: 90px;
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-left-color: var(--main-theme-dark);
+}
+
+.sidebar a {
+    padding-left: 10px ;
+    text-decoration: none;
+    white-space: nowrap;
+    font-size: 2.2vh;
+    color: var(--main-theme-light);
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    transition: 0.15s;
+}
+
+.sidebar a:hover {
+    color: lightcoral;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    font-size: 40px;
+}
+
+.sidebar-links-div {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.link-div {
+    display: grid;
+    height: 10vh;
+    grid-template-columns: 14vw 36vw;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (min-width: 700px) {
+    .link-div {
+        grid-template-columns: 80px 170px;
+    }
+}
+
+.sidebar-img-div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sidebar-img {
+    width: 30px;
+    object-fit: cover;
+}
+
+@media screen and (max-height: 450px) {
+    .sidebar {padding-top: 15px;}
+    .sidebar a {font-size: 18px;}
+}
+
+.profile-pic {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    height: 100%;
+    margin-left: 15px;
+}
+
+
+.profile-pic-btn {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    border-style: none;
+}
+
+.profile-pic-btn:hover {
+    cursor: pointer;
+}
+
+.user-pic {
+    height: 50%;
+    object-fit: cover;
+}
+
+.main-div {
+    z-index: 0;
+    margin-top: 14vh;
+    height: 78%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(241, 241, 241);
+}
+
+.home-page-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.user-info-div {
+    position: relative;
+    top: -5%;
+    width: 90%;
+    height: 15%;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 1px 1px 8px rgb(0, 0, 0, 0.2);
+    
+}
+
+.home-img-div {
+    margin: 5% 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20%;
+}
+
+.home-img {
+    
+    height: 100%;
+    object-fit: contain;
+}
+
+.user-req-btn-div {
+    width: 100%;
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.user-req-btn {
+    width: 50%;
+    height: 25%;
+    background-color: var(--main-theme-dark);
+    border-radius: 10px;
+}
+
+.user-req-btn:hover {
+    cursor: pointer;
+} 
+*/
