--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
         </div>
 
         <div id="l_container" class="l_container">
-            <button onclick="window.location.href='./reg.html'"">
+            <button onclick="window.location.href='./reg.html'">
                 Sign-Up
             </button>
         </div>
