--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -71,7 +71,24 @@
       </header>
       
       <main class="main-div">
+        <div class="home-page-div">
+          <div id="user-info-div" class="user-info-div"></div>
 
+          <div id="home-img-div" class="home-img-div">
+            <img src="./img/img1.jpg" class="home-img">
+          </div>
+
+          <div class="user-req-btn-div">
+            <div class="user-req-btn donate-bld-btn">
+
+            </div>
+
+            <div class="user-req-btn req-bld-btn">
+               
+            </div>
+          </div>
+
+        </div>
       </main>
   
       <footer class="footer" id="footer">
