--- a/public/css/style.css
+++ b/public/css/style.css
@@ -247,7 +247,7 @@ body {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 20;
+    z-index: 2;
     top: 0;
     right: 0;
     background-color: var(--main-theme-dark);
@@ -277,10 +277,11 @@ body {
 
 .sidebar .closebtn {
     position: absolute;
-    top: 0px;
+    top: 2.2vh;
     right: 10px;
     font-size: 40px;
 }
+
 
 .sidebar-links-div {
     display: flex;
@@ -347,8 +348,8 @@ body {
 
 .main-div {
     z-index: 0;
-    margin-top: 14vh;
-    height: 78%;
+    margin-top: 10vh;
+    height: 82%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -367,22 +368,23 @@ body {
 
 .user-info-div {
     position: relative;
-    top: -5%;
+    top: -2%;
     width: 90%;
     height: 15%;
     border-radius: 10px;
     background-color: white;
     box-shadow: 1px 1px 8px rgb(0, 0, 0, 0.2);
+    margin-bottom: 2%;
     
 }
 
 .home-img-div {
-    margin: 5% 0;
+    margin: 2% 0;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 20%;
+    height: 24%;
 }
 
 .home-img {
