--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -49,7 +49,6 @@
             <div id="lt" class="lt">Sign-Up</div>
             <div id="fm" class="fm">
               <div>
-                <button onclick="go()">Get Location</button>
                 <form
                   id="loginf"
                   class="loginf"
@@ -58,17 +57,17 @@
                   >
                   <label for="uname">Username:</label>
                   <input type="text" id="uname" name="uname" /><br />
-                  <label for="passw">Password</label>
+                  <label for="passw">Password:</label>
                   <input type="password" id="passw" name="passw" /><br />
                   <label for="bloodt">Blood-Type:</label>
                   <input type="text" id="bloodt" name="bloodt" /><br />
-                  <label for="phn">Phone</label>
+                  <label for="phn">Phone:</label>
                   <input type="text" id="phn" name="phn" /><br />
                   <label for="addr">Address:</label>
                   <input type="text" id="addr" name="addr" /><br />
-                  <label for="age">Age</label>
+                  <label for="age">Age:</label>
                   <input type="text" id="age" name="age" /><br />
-                  <input type="submit" value="Submit"/>
+                  <button class ="locbut" onclick="go()">Submit</button>
                 </form>
               </div>
             </div>
