--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -72,7 +72,9 @@
       
       <main class="main-div">
         <div class="home-page-div">
-          <div id="user-info-div" class="user-info-div"></div>
+          <div id="user-info-div" class="user-info-div">
+            <p>Welcome <%= name %> !</p>
+          </div>
 
           <div id="home-img-div" class="home-img-div">
             <img src="./img/img1.jpg" class="home-img">
@@ -80,11 +82,11 @@
 
           <div class="user-req-btn-div">
             <div class="user-req-btn donate-bld-btn">
-
+              Donate
             </div>
 
             <div class="user-req-btn req-bld-btn">
-               
+              Request
             </div>
           </div>
 
