--- a/views/list.ejs
+++ b/views/list.ejs
@@ -2,108 +2,200 @@
 
 <html>
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width = device-width, initial-scale = 1" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Blood Donation</title>
   </head>
 
   <body>
-
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 
       <div class="sidebar-links-div">
         <div class="link-div">
           <div class="sidebar-img-div">
-            <img src="./img/user-white.png" class="sidebar-img">
+            <img src="./img/user-white.png" class="sidebar-img" />
           </div>
           <a href="profile">My Profile</a>
         </div>
 
         <div class="link-div">
           <div class="sidebar-img-div">
-            <img src="./img/user-white.png" class="sidebar-img">
+            <img src="./img/user-white.png" class="sidebar-img" />
           </div>
           <a href="dash.html">Notifications</a>
         </div>
 
         <div class="link-div">
           <div class="sidebar-img-div">
-            <img src="./img/user-white.png" class="sidebar-img">
+            <img src="./img/user-white.png" class="sidebar-img" />
           </div>
           <a href="about.html">About Us</a>
         </div>
 
         <div class="link-div">
           <div class="sidebar-img-div">
-            <img src="./img/user-white.png" class="sidebar-img">
+            <img src="./img/user-white.png" class="sidebar-img" />
           </div>
           <a href="contact.html">Contact Us</a>
         </div>
       </div>
-
     </div>
 
-    
     <div id="website-div" class="website-div">
-      
       <header class="header" id="header">
         <div class="top-bar">
           <div class="profile-pic">
-            <button class="profile-pic-btn" id="profile-pic-btn" ><img class="user-pic" src="./img/white-blood.svg"></button>
+            <button class="profile-pic-btn" id="profile-pic-btn">
+              <img class="user-pic" src="./img/white-blood.svg" />
+            </button>
           </div>
-  
+
           <div class="profile-info">RaktKosh</div>
-          
+
           <div class="nav-btn-div" onclick="openNav()">
             <a href="#" class="nav">
               <div class="one"></div>
               <div class="two"></div>
               <div class="three"></div>
-           </a>
+            </a>
           </div>
-  
         </div>
       </header>
-      
-      <main class="main-div">
-        
+
+      <main class="main-div nlist">
+
+        <div id="ubox" class="ubox">
+          <div id="uimg" class="uimg">
+            <img src="./img/redb.png" alt="" />
+          </div>
+
+          <div id="uholder" class="uholder">
+            <div id="uinfo" class="uinfo">
+              <p id="p1" class="p1">Dinesh Reddy</p>
+              <p id="p2" class="p2">Blood-Type : B+</p>
+              <p id="p3" class="p3">SJT, Vit university, Vellore, Tamil Nadu</p>
+            </div>
+
+            <div id="ubutton" class="ubutton">
+              <button>Connect</button>
+            </div>
+          </div>
+        </div>
+
+        <div id="ubox" class="ubox">
+          <div id="uimg" class="uimg">
+            <img src="./img/redb.png" alt="" />
+          </div>
+
+          <div id="uholder" class="uholder">
+            <div id="uinfo" class="uinfo">
+              <p id="p1" class="p1">Utkarsh Vishnoi</p>
+              <p id="p2" class="p2">Blood-Type : A+</p>
+              <p id="p3" class="p3">Mens Hostel, M block, Vit university, Vellore, Tamil Nadu</p>
+            </div>
+
+            <div id="ubutton" class="ubutton">
+              <button>Connect</button>
+            </div>
+          </div>
+        </div>
+
+        <div id="ubox" class="ubox">
+          <div id="uimg" class="uimg">
+            <img src="./img/redb.png" alt="" />
+          </div>
+
+          <div id="uholder" class="uholder">
+            <div id="uinfo" class="uinfo">
+              <p id="p1" class="p1">Mokshita Bajpai</p>
+              <p id="p2" class="p2">Blood-Type : O-</p>
+              <p id="p3" class="p3">C block, Girls Hostel,Vit university, Vellore, Tamil Nadu</p>
+            </div>
+
+            <div id="ubutton" class="ubutton">
+              <button>Connect</button>
+            </div>
+          </div>
+        </div>
+
+        <div id="ubox" class="ubox">
+          <div id="uimg" class="uimg">
+            <img src="./img/redb.png" alt="" />
+          </div>
+
+          <div id="uholder" class="uholder">
+            <div id="uinfo" class="uinfo">
+              <p id="p1" class="p1">Marmik Jethwa</p>
+              <p id="p2" class="p2">Blood-Type : A+</p>
+              <p id="p3" class="p3">Q BLock, Mens Hostel, Vit university, Vellore, Tamil Nadu</p>
+            </div>
+
+            <div id="ubutton" class="ubutton">
+              <button>Connect</button>
+            </div>
+          </div>
+        </div>
+
+        <div id="ubox" class="ubox">
+          <div id="uimg" class="uimg">
+            <img src="./img/redb.png" alt="" />
+          </div>
+
+          <div id="uholder" class="uholder">
+            <div id="uinfo" class="uinfo">
+              <p id="p1" class="p1">Krutika Shrivastava</p>
+              <p id="p2" class="p2">Blood-Type : B+</p>
+              <p id="p3" class="p3">GH block, Girls Hostel, Vit university, Vellore, Tamil Nadu</p>
+            </div>
+
+            <div id="ubutton" class="ubutton">
+              <button>Connect</button>
+            </div>
+          </div>
+        </div>
       </main>
-  
+
       <footer class="footer" id="footer">
         <div class="bot-bar">
-          <button class="bot-btn" id="js-bot-btn1" onclick="goToPage(`temp`)">Home</button>
-          <button class="bot-btn" id="js-bot-btn2" onclick="goToPage(`map`)">Map</button>
-          <button class="bot-btn" id="js-bot-btn2" onclick="goToPage(`list`)">List</button>
+          <button class="bot-btn" id="js-bot-btn1" onclick="goToPage(`temp`)">
+            Home
+          </button>
+          <button class="bot-btn" id="js-bot-btn2" onclick="goToPage(`map`)">
+            Map
+          </button>
+          <button class="bot-btn" id="js-bot-btn2" onclick="goToPage(`list`)">
+            List
+          </button>
         </div>
       </footer>
     </div>
 
     <script>
       function openNav() {
+        let width = window.matchMedia("(min-width: 700px)");
 
-      let width = window.matchMedia("(min-width: 700px)");
-
-      if(width.matches) {
+        if (width.matches) {
           document.getElementById("mySidebar").style.width = "250px";
-      }
-      else {
+        } else {
           document.getElementById("mySidebar").style.width = "50vw";
-      }
+        }
       }
 
       function closeNav() {
-      document.getElementById("mySidebar").style.width = "0";
+        document.getElementById("mySidebar").style.width = "0";
       }
 
       function goToPage(pname) {
-      location.replace(`${pname}`);
+        location.replace(`${pname}`);
       }
     </script>
-
   </body>
 </html>
