--- a/views/map.ejs
+++ b/views/map.ejs
@@ -137,8 +137,9 @@
           let p2 = new Microsoft.Maps.Location(12.9692, 79.1544);
           let p3 = new Microsoft.Maps.Location(12.9707, 79.1570);
           let p4 = new Microsoft.Maps.Location(12.9688, 79.1560);
+          let p5 = new Microsoft.Maps.Location(12.9701, 79.1540);
 
-          let locs = [p1,p2,p3,p4];
+          let locs = [p1,p2,p3,p4,p5];
 
           for(let i = 0; i<locs.length; i++){
 
