--- a/public/css/style.css
+++ b/public/css/style.css
@@ -397,6 +397,15 @@ body {
     color: black;
 }
 
+.nlist{
+    align-items: start;
+    padding-top: 2%;
+
+    display: block;
+
+    overflow:scroll;
+}
+
 .home-page-div {
     display: flex;
     flex-direction: column;
@@ -461,3 +470,85 @@ body {
 .user-req-btn:hover {
     cursor: pointer;
 } 
+
+
+.ubox{
+    width: 98%;
+    height: 170px;
+    border: 1px;
+    border-radius: 12px;
+    border-style: solid;
+    border-color: #9797978d;
+    background-color: white;
+    box-shadow: 1px 2px 5px gray;
+
+    margin-bottom: 10px;
+
+    margin-left: 2px;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.uimg img{
+    width: 50px;
+}
+
+.uimg{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.uholder{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.uinfo{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+}
+
+.uinfo p{
+    margin: 2vw;
+}
+
+.p1{
+    font-size: 5vw;
+}
+
+.p2{
+
+
+}
+
+.p3{
+    color: gray;
+}
+
+.ubutton{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.ubutton button{
+    background-color: rgb(0, 210, 0);
+    border-radius: 12px;
+    border: none;
+    width: 50%;
+    color: white;
+    height: 3vh;
+
+
+}
+
