--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -77,7 +77,7 @@
           </div>
 
           <div id="home-img-div" class="home-img-div">
-            <img src="./img/img1.jpg" class="home-img">
+            <img src="./img/img1.png" class="home-img">
           </div>
 
           <div class="user-req-btn-div">
