--- a/views/list.ejs
+++ b/views/list.ejs
@@ -30,21 +30,21 @@
           <div class="sidebar-img-div">
             <img src="./img/user-white.png" class="sidebar-img" />
           </div>
-          <a href="dash.html">Notifications</a>
+          <a href="profile">Notifications</a>
         </div>
 
         <div class="link-div">
           <div class="sidebar-img-div">
             <img src="./img/user-white.png" class="sidebar-img" />
           </div>
-          <a href="about.html">About Us</a>
+          <a href="profile">About Us</a>
         </div>
 
         <div class="link-div">
           <div class="sidebar-img-div">
             <img src="./img/user-white.png" class="sidebar-img" />
           </div>
-          <a href="contact.html">Contact Us</a>
+          <a href="profile">Contact Us</a>
         </div>
       </div>
     </div>
@@ -79,13 +79,13 @@
 
           <div id="uholder" class="uholder">
             <div id="uinfo" class="uinfo">
-              <p id="p1" class="p1">Dinesh Reddy</p>
+              <p id="p1" class="p1">Pulkit Loyalka</p>
               <p id="p2" class="p2">Blood-Type : B+</p>
-              <p id="p3" class="p3">SJT, Vit university, Vellore, Tamil Nadu</p>
+              <p id="p3" class="p3">R Block, Mens Hostel,Vit university, Vellore, Tamil Nadu</p>
             </div>
 
             <div id="ubutton" class="ubutton">
-              <button>Connect</button>
+              <button><a href="https://www.google.com/maps/dir/12.96915,79.155204/Vellore+Institute+of+Technology,+VIT,+Vellore+Campus,+Tiruvalam+Rd,+Katpadi,+Vellore,+Tamil+Nadu+632014/@12.9692232,79.1533587,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x3bad479f0ccbe067:0xfef222e5f36ecdeb!2m2!1d79.1559336!2d12.9692232!3e2?entry=ttu">Connect</a></button>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
             </div>
 
             <div id="ubutton" class="ubutton">
-              <button>Connect</button>
+              <button><a href="https://www.google.com/maps/dir/12.96915,79.155204/Vellore+Institute+of+Technology,+VIT,+Vellore+Campus,+Tiruvalam+Rd,+Katpadi,+Vellore,+Tamil+Nadu+632014/@12.9692232,79.1533587,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x3bad479f0ccbe067:0xfef222e5f36ecdeb!2m2!1d79.1559336!2d12.9692232!3e2?entry=ttu">Connect</a></button>
             </div>
           </div>
         </div>
@@ -121,7 +121,7 @@
             </div>
 
             <div id="ubutton" class="ubutton">
-              <button>Connect</button>
+              <button><a href="https://www.google.com/maps/dir/12.96915,79.155204/Vellore+Institute+of+Technology,+VIT,+Vellore+Campus,+Tiruvalam+Rd,+Katpadi,+Vellore,+Tamil+Nadu+632014/@12.9692232,79.1533587,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x3bad479f0ccbe067:0xfef222e5f36ecdeb!2m2!1d79.1559336!2d12.9692232!3e2?entry=ttu">Connect</a></button>
             </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
             </div>
 
             <div id="ubutton" class="ubutton">
-              <button>Connect</button>
+              <button><a href="https://www.google.com/maps/dir/12.96915,79.155204/Vellore+Institute+of+Technology,+VIT,+Vellore+Campus,+Tiruvalam+Rd,+Katpadi,+Vellore,+Tamil+Nadu+632014/@12.9692232,79.1533587,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x3bad479f0ccbe067:0xfef222e5f36ecdeb!2m2!1d79.1559336!2d12.9692232!3e2?entry=ttu">Connect</a></button>
             </div>
           </div>
         </div>
@@ -157,7 +157,7 @@
             </div>
 
             <div id="ubutton" class="ubutton">
-              <button>Connect</button>
+              <button><a href="https://www.google.com/maps/dir/12.96915,79.155204/Vellore+Institute+of+Technology,+VIT,+Vellore+Campus,+Tiruvalam+Rd,+Katpadi,+Vellore,+Tamil+Nadu+632014/@12.9692232,79.1533587,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x3bad479f0ccbe067:0xfef222e5f36ecdeb!2m2!1d79.1559336!2d12.9692232!3e2?entry=ttu">Connect</a></button>
             </div>
           </div>
         </div>
