--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -28,21 +28,21 @@
           <div class="sidebar-img-div">
             <img src="./img/user-white.png" class="sidebar-img">
           </div>
-          <a href="dash.html">Notifications</a>
+          <a href="profile">Notifications</a>
         </div>
 
         <div class="link-div">
           <div class="sidebar-img-div">
             <img src="./img/user-white.png" class="sidebar-img">
           </div>
-          <a href="about.html">About Us</a>
+          <a href="profile">About Us</a>
         </div>
 
         <div class="link-div">
           <div class="sidebar-img-div">
             <img src="./img/user-white.png" class="sidebar-img">
           </div>
-          <a href="contact.html">Contact Us</a>
+          <a href="profile">Contact Us</a>
         </div>
       </div>
 
@@ -81,11 +81,11 @@
           </div>
 
           <div class="user-req-btn-div">
-            <div class="user-req-btn donate-bld-btn">
+            <div class="user-req-btn donate-bld-btn" onclick="goToPage(`map`)">
               Donate
             </div>
 
-            <div class="user-req-btn req-bld-btn">
+            <div class="user-req-btn req-bld-btn" onclick="goToPage(`map`)">
               Request
             </div>
           </div>
