--- a/views/map.ejs
+++ b/views/map.ejs
@@ -110,7 +110,7 @@
     </script>
 
     <script type='text/javascript'
-    src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AgiYqPQ8XPpE8-jLEE-W3Xz6yTrYosqe8dCqIdEBL-oWBZ6VWUHYhxziThSZ2lbM' 
+    src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AgiYqPQ8XPpE8-jLEE-W3Xz6yTrYosqe8dCqIdEBL-oWBZ6VWUHYhxziThSZ2lbM' 
     async defer></script>
     <script type='text/javascript'>
       function GetMap()
