--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,6 @@
 
     color: white;
 
-
 }
 
 .m_container {
@@ -133,6 +132,7 @@ input[type=button], input[type=submit], input[type=reset] {
   }
 
   .myMap{
+    z-index: 0;
     width: 100%;
     height: 100%;
   }
@@ -174,11 +174,13 @@ body {
 }
 
 .header{
+    z-index: 0;
     height: 10%;
     width: 100%;
 }
 
 .footer {
+    z-index: 0;
     height: 8%;
     width: 100%;
 }
@@ -211,7 +213,8 @@ body {
 
 .bot-btn {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     font-size: 2vh;
     height: 100%;
@@ -222,6 +225,40 @@ body {
 
 .bot-btn:hover {
     cursor: pointer;
+}
+
+.bot-btn p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+}
+
+.bot-btn-icon-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+}
+
+.bot-btn-icon {
+    object-fit: contain;
+    opacity: 0.4;
+}
+
+.home-icon {
+    height: 80%;
+}
+
+.map-icon {
+    height: 80%;
+}
+
+.list-icon {
+    height: 80%;
 }
 
 .nav div {
@@ -241,12 +278,10 @@ body {
     height: 100%;
 }
 
-
-
 .nav {
-    width: 30px;
+    width: 40px;
     display: block;  
-    margin-right: 15%;  
+    margin-right: 8%;  
 }
 .one {
     width: 30px;
@@ -267,7 +302,7 @@ body {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 2;
+    z-index: 10;
     top: 0;
     right: 0;
     background-color: var(--main-theme-dark);
@@ -297,8 +332,8 @@ body {
 
 .sidebar .closebtn {
     position: absolute;
-    top: 2.2vh;
-    right: 10px;
+    top: 2vh;
+    right: 20px;
     font-size: 40px;
 }
 
@@ -351,7 +386,7 @@ body {
 }
 
 .profile-info {
-    width: 80%;
+    width: 60%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -382,6 +417,7 @@ body {
 }
 
 .main-div {
+    z-index: 0;
     height: 82%;
     width: 100%;
     display: flex;
@@ -411,16 +447,17 @@ body {
 
 .user-info-div {
 
+    z-index: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     top: -1.5%;
     width: 90%;
-    height: 15%;
+    height: 20%;
     border-radius: 10px;
     background-color: white;
-    box-shadow: 1px 1px 8px rgb(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 8px rgb(0, 0, 0, 0.3);
     margin-bottom: 2%;
     font-size: 3.4vh;    
 }
@@ -431,7 +468,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 24%;
+    height: 25%;
 }
 
 .home-img {
@@ -442,7 +479,7 @@ body {
 
 .user-req-btn-div {
     width: 100%;
-    height: 65%;
+    height: 55%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -559,3 +596,22 @@ body {
     text-decoration: none;
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.website-blur {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    /* animation: fadeIn 2s; */
+    background-color: rgba(0, 0, 0, 0.7);
+}
