--- a/views/list.ejs
+++ b/views/list.ejs
@@ -49,12 +49,15 @@
       </div>
     </div>
 
+    <div class="website-blur" id="js-website-blur">
+    </div>
+
     <div id="website-div" class="website-div">
       <header class="header" id="header">
         <div class="top-bar">
           <div class="profile-pic">
             <button class="profile-pic-btn" id="profile-pic-btn">
-              <img class="user-pic" src="./img/white-blood.svg" />
+              <img class="user-pic" src="./img/white-blood.svg">
             </button>
           </div>
 
@@ -166,13 +169,24 @@
       <footer class="footer" id="footer">
         <div class="bot-bar">
           <button class="bot-btn" id="js-bot-btn1" onclick="goToPage(`temp`)">
-            Home
+            <div class="bot-btn-icon-div">
+              <img class="bot-btn-icon home-icon" src="./img/homeicon.png">
+            </div> 
+            <p>Home</p>
           </button>
+
           <button class="bot-btn" id="js-bot-btn2" onclick="goToPage(`map`)">
-            Map
+            <div class="bot-btn-icon-div">
+              <img class="bot-btn-icon map-icon" src="./img/mapicon.png">
+            </div> 
+            <p>Map</p>
           </button>
+
           <button class="bot-btn" id="js-bot-btn2" onclick="goToPage(`list`)">
-            List
+            <div class="bot-btn-icon-div">
+              <img class="bot-btn-icon list-icon" src="./img/listicon.png">
+            </div> 
+            <p>List</p>
           </button>
         </div>
       </footer>
@@ -180,20 +194,27 @@
 
     <script>
       function openNav() {
+
+        document.getElementById("js-website-blur").style.zIndex = "5";
+
         let width = window.matchMedia("(min-width: 700px)");
 
-        if (width.matches) {
-          document.getElementById("mySidebar").style.width = "250px";
-        } else {
-          document.getElementById("mySidebar").style.width = "50vw";
+        if(width.matches) {
+            document.getElementById("mySidebar").style.width = "250px";
+        }
+        else {
+            document.getElementById("mySidebar").style.width = "50vw";
         }
       }
 
       function closeNav() {
-        document.getElementById("mySidebar").style.width = "0";
-      }
 
-      function goToPage(pname) {
+        document.getElementById("js-website-blur").style.zIndex = "-1";
+
+        document.getElementById("mySidebar").style.width = "0";
+        }
+
+        function goToPage(pname) {
         location.replace(`${pname}`);
       }
     </script>
